# gSOAP

./: CMakeLists.txt  usexp-gsoap-config.cmake
gsoap/: gsoap.vcproj  gsoap_vc10.vcxproj  gsoap_vc10.vcxproj.filters  stdsoap2.h
